Added note for MacOS Support

--- a/README
+++ b/README
@@ -1,5 +1,5 @@
-Python Labjack U12 driver
-=========================
+Python Labjack U12 driver with MacOS Support
+============================================
 
 
 Requirements:
